Smart Finance 2.0 oficial
- Em detalhes de transação, categoria continua selecionada com opção que foi registrada anteriormente
- Definida ordem das transações recentes na tela inicial por data
- Retirado limite de transações mostrados na tela de todas as transações
- Implementado troca de modo entre claro e escuro
- Alterado tamanho janela detalhes transação para adicionar/retirar da meta
- Comentários no código para facilitar debug
- Antes comentário definia o nome da transação, se fosse nulo, nome recebia a categoria, por questão de design agora nome da transação só recebe categoria
- Comentário não aparecia, método configurarParaEditar usava descricao() em vez de comentario()
- Adicionada opção de excluir transação dentro da janela de detalhes de transação
- Texto "total de Entradas" e "Total de Saídas" da janela de todas as transações com cores customizadas (verde para entrada e vermelho para saída) - modo claro
- Texto "total de Entradas" e "Total de Saídas" da janela de todas as transações com cores customizadas (verde para entrada e vermelho para saída) - modo escuro"